<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal"
    tools:context=".Activity_6">

    <TextView
        android:id="@+id/txtUsernameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/txtInfo" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="50dp"
        android:text="@string/txtUsername" />

    <TextView
        android:id="@+id/txtProfileDsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:text="@string/txtProfileDsc" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />
         <!-- I added hint here -->

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/txtOR"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtMspDsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/findProfileDsc" />

    <EditText
        android:id="@+id/etMSP"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:hint="@string/txtMSPnum"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />
    <!-- I added hint here -->
    <Button
        android:id="@+id/btnFindProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="30dp"
        android:text="@string/btnFindProfile" />
</LinearLayout>