<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMessageNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txtMessageNote"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtSendMessageNoMSp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeaveMessage"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editComplainNoMSP"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:hint="@string/complaintHint"
            android:inputType="textMultiLine"
            tools:ignore="autofill" />

        <Button
            android:id="@+id/btnSendNoMSP"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:text="@string/btnSendMessage" />

        <TextView
            android:id="@+id/txtAddBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAddBalance"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>