<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".Activity_13">

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/txtHelloAccount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="end|top"
        android:text="@string/txtEditProfile" />



    <TextView
        android:id="@+id/txtPayHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPayHistory"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPaymentHistory"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="186dp"
        android:layout_height="47dp"
        android:textColor="#ffffff"
        android:background="@drawable/bg_button"
        android:text="@string/btnReturProf" />

</LinearLayout>