<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".Activity_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:text="@string/txtEmail"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtEmail"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:text="@string/txtpassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/hintpass"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtFirstName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtFirstName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etFName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtFirstName"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLastName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtLname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etLName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtLname"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPhoneNum"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtPhoneNum"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPh"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtPhoneNum"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMSP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtMSPnum"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etMSP"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtMSPnum"
            android:inputType="textPersonName" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxMSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/rdNoMSP" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtAge"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtAge"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPostalCode"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtPostal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPostal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/txtPostal"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:text="@string/btnRegister" />

</LinearLayout>